--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
   <!-- Аудио элементы -->
   <audio id="background-music" loop>
-    <source src="audio/background_music.wav" type="audio/wav">
+    <source src="audio/background_music.mp3" type="audio/mp3">
     Ваш браузер не поддерживает элемент <audio>.
   </audio>
   <audio id="wool-collect-sound">
