--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
   <!-- Экран выбора персонажа -->
   <div id="character-select">
-    <h2>Что это? По всему дому лежит кошкина шерсть</h2>
+    <h2>Что это? По всему дому лежит кошкина шерсть!</h2>
     <h3>Тебе придется её собрать :)</h3>
     <div style="display: flex; justify-content: center;">
       <button onclick="selectCharacter('masha')" style="margin-right: 60px;">Маша</button>
